@@ -31,7 +31,6 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -104,6 +103,7 @@ class BusinessResourceIntegrationTests {
             "\"created\":\"%s\"," +
             "\"role\":\"%s\"," +
             "\"businessesAdministered\":[null]," +
+            "\"images\":%s," +
             "\"dateOfBirth\":\"%s\"," +
             "\"phoneNumber\":\"%s\"," +
             "\"homeAddress\":{\"streetNumber\":\"%s\",\"streetName\":\"%s\",\"suburb\":\"%s\",\"city\":\"%s\",\"region\":\"%s\",\"country\":\"%s\",\"postcode\":\"%s\"}}]";
@@ -676,6 +676,7 @@ class BusinessResourceIntegrationTests {
                     "\"businessesAdministered\":[" +
                     "null" +
                     "]," +
+                    "\"images\":[]," +
                     "\"dateOfBirth\":\"2007-02-02\"," +
                     "\"phoneNumber\":\"0271316\"," +
                     "\"homeAddress\":{" +
@@ -739,6 +740,7 @@ class BusinessResourceIntegrationTests {
                 "\"businessesAdministered\":[" +
                 "null" +
                 "]," +
+                "\"images\":[]," +
                 "\"dateOfBirth\":\"2007-02-02\"," +
                 "\"phoneNumber\":\"0271316\"," +
                 "\"homeAddress\":{" +
@@ -818,6 +820,7 @@ class BusinessResourceIntegrationTests {
                 "\"businessesAdministered\":[" +
                 "null" +
                 "]," +
+                "\"images\":[]," +
                 "\"dateOfBirth\":\"2007-02-02\"," +
                 "\"phoneNumber\":\"0271316\"," +
                 "\"homeAddress\":{" +
@@ -2043,12 +2046,13 @@ class BusinessResourceIntegrationTests {
     void canSearchBusinessesByNameWhenBusinessExistsWithDgaaCookieTest() throws Exception {
         // given
         String searchQuery = "NAME";
-        List<String> names = Arrays.asList(searchQuery);
+        List<String> names = List.of(searchQuery);
 
-        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(), user.getLastName(),
-                user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(), user.getCreated(), user.getRole(),
-                user.getDateOfBirth(), user.getPhoneNumber(), address.getStreetNumber(), address.getStreetName(), address.getSuburb(),
-                address.getCity(), address.getRegion(), address.getCountry(), address.getPostcode());
+        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(),
+                user.getLastName(), user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(),
+                user.getCreated(), user.getRole(), "[]", user.getDateOfBirth(), user.getPhoneNumber(),
+                address.getStreetNumber(), address.getStreetName(), address.getSuburb(), address.getCity(),
+                address.getRegion(), address.getCountry(), address.getPostcode());
         expectedJson = "[" + String.format(expectedBusinessJson, business.getId(), expectedUserJson, business.getPrimaryAdministratorId(),
                 business.getName(), business.getDescription(), business.getAddress(), business.getBusinessType(), business.getCreated(),
                 business.getCurrencySymbol(), business.getCurrencyCode()) + "]";
@@ -2079,14 +2083,16 @@ class BusinessResourceIntegrationTests {
     void canSearchBusinessesWhenBusinessExistsWithValidOrderByAndPageParamsTest() throws Exception {
         // given
         String searchQuery = "NAME";
-        List<String> names = Arrays.asList(searchQuery);
+        List<String> names = List.of(searchQuery);
 
-        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(), user.getLastName(),
-                user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(), user.getCreated(), user.getRole(),
-                user.getDateOfBirth(), user.getPhoneNumber(), address.getStreetNumber(), address.getStreetName(), address.getSuburb(),
-                address.getCity(), address.getRegion(), address.getCountry(), address.getPostcode());
-        expectedJson = "[" + String.format(expectedBusinessJson, business.getId(), expectedUserJson, business.getPrimaryAdministratorId(),
-                business.getName(), business.getDescription(), business.getAddress(), business.getBusinessType(), business.getCreated(),
+        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(),
+                user.getLastName(), user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(),
+                user.getCreated(), user.getRole(), "[]", user.getDateOfBirth(), user.getPhoneNumber(),
+                address.getStreetNumber(), address.getStreetName(), address.getSuburb(), address.getCity(),
+                address.getRegion(), address.getCountry(), address.getPostcode());
+        expectedJson = "[" + String.format(expectedBusinessJson, business.getId(), expectedUserJson,
+                business.getPrimaryAdministratorId(), business.getName(), business.getDescription(),
+                business.getAddress(), business.getBusinessType(), business.getCreated(),
                 business.getCurrencySymbol(), business.getCurrencyCode()) + "]";
 
 
@@ -2118,12 +2124,13 @@ class BusinessResourceIntegrationTests {
     void canSearchBusinessesByNameWhenBusinessExistsWithUserCookieTest() throws Exception {
         // given
         String searchQuery = "NAME";
-        List<String> names = Arrays.asList(searchQuery);
+        List<String> names = List.of(searchQuery);
 
-        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(), user.getLastName(),
-                user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(), user.getCreated(), user.getRole(),
-                user.getDateOfBirth(), user.getPhoneNumber(), address.getStreetNumber(), address.getStreetName(), address.getSuburb(),
-                address.getCity(), address.getRegion(), address.getCountry(), address.getPostcode());
+        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(),
+                user.getLastName(), user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(),
+                user.getCreated(), user.getRole(), "[]", user.getDateOfBirth(), user.getPhoneNumber(),
+                address.getStreetNumber(), address.getStreetName(), address.getSuburb(), address.getCity(),
+                address.getRegion(), address.getCountry(), address.getPostcode());
         expectedJson = "[" + String.format(expectedBusinessJson, business.getId(), expectedUserJson, business.getPrimaryAdministratorId(),
                 business.getName(), business.getDescription(), business.getAddress(), business.getBusinessType(), business.getCreated(),
                 business.getCurrencySymbol(), business.getCurrencyCode()) + "]";
@@ -2153,7 +2160,7 @@ class BusinessResourceIntegrationTests {
     void emptySearchBusinessesByNameWhenBusinessDoesntExistTest() throws Exception {
         // given
         String searchQuery = "BUSINESS";
-        List<String> names = Arrays.asList(searchQuery);
+        List<String> names = List.of(searchQuery);
         expectedJson = "[]";
 
         // when
@@ -2270,10 +2277,11 @@ class BusinessResourceIntegrationTests {
         String businessType = "ACCOMMODATION_AND_FOOD_SERVICES";
         BusinessType convertedBusinessType = BusinessType.ACCOMMODATION_AND_FOOD_SERVICES;
 
-        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(), user.getLastName(),
-                user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(), user.getCreated(), user.getRole(),
-                user.getDateOfBirth(), user.getPhoneNumber(), address.getStreetNumber(), address.getStreetName(), address.getSuburb(),
-                address.getCity(), address.getRegion(), address.getCountry(), address.getPostcode());
+        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(),
+                user.getLastName(), user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(),
+                user.getCreated(), user.getRole(), "[]", user.getDateOfBirth(), user.getPhoneNumber(),
+                address.getStreetNumber(), address.getStreetName(), address.getSuburb(), address.getCity(),
+                address.getRegion(), address.getCountry(), address.getPostcode());
         expectedJson = "[" + String.format(expectedBusinessJson, business.getId(), expectedUserJson, business.getPrimaryAdministratorId(),
                 business.getName(), business.getDescription(), business.getAddress(), business.getBusinessType(), business.getCreated(),
                 business.getCurrencySymbol(), business.getCurrencyCode()) + "]";
@@ -2306,12 +2314,13 @@ class BusinessResourceIntegrationTests {
         String businessType = "ACCOMMODATION_AND_FOOD_SERVICES";
         BusinessType convertedBusinessType = BusinessType.ACCOMMODATION_AND_FOOD_SERVICES;
         String searchQuery = "NAME";
-        List<String> names = Arrays.asList(searchQuery);
+        List<String> names = List.of(searchQuery);
 
-        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(), user.getLastName(),
-                user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(), user.getCreated(), user.getRole(),
-                user.getDateOfBirth(), user.getPhoneNumber(), address.getStreetNumber(), address.getStreetName(), address.getSuburb(),
-                address.getCity(), address.getRegion(), address.getCountry(), address.getPostcode());
+        expectedUserJson = String.format(expectedAdministratorJson, user.getId(), user.getFirstName(),
+                user.getLastName(), user.getMiddleName(), user.getNickname(), user.getBio(), user.getEmail(),
+                user.getCreated(), user.getRole(), "[]", user.getDateOfBirth(), user.getPhoneNumber(),
+                address.getStreetNumber(), address.getStreetName(), address.getSuburb(), address.getCity(),
+                address.getRegion(), address.getCountry(), address.getPostcode());
         expectedJson = "[" + String.format(expectedBusinessJson, business.getId(), expectedUserJson, business.getPrimaryAdministratorId(),
                 business.getName(), business.getDescription(), business.getAddress(), business.getBusinessType(), business.getCreated(),
                 business.getCurrencySymbol(), business.getCurrencyCode()) + "]";
